==================================

        - fixed license fields in META.json to be lists.
        - extended META and functional test suites.
        - compare_dates and encode_date undefined logic reworked.
        - reformat_date day/month/year validation must be numeric.
        - fixed DDEXT and dotw bugs.
        - simplified logic for holidays and exclusions.

0.26    2012-11-18
        - change file dates changed to meet W3CDTF standards.
        - test file updates.

0.25    2012-04-29
	    - added minimum perl version (5.006).
	    - META tests no longer require specific versions.
	    - spelling fix. (thanks to Florian Schlichting & Gregor Herrmann).

0.24    2012-04-15
	    - removed debugging lines.

0.23    2012-04-15
        - update META.yml to prevent TestData.pm from being indexed.
        - License updated to Artistic License v2.0.
        - removed Artistic file.
        - added META.json and test script.

0.22    2009-18-18
        - added more tests
        - updated documentation.
        - Due to previous rewrite, all versions of DateTime are now supported.

0.21    2008-06-02
        - updated META.yml to correctly include DateTime optional prerequisite.
        - added dubious TestData to META.yml to see how PAUSE and CPANTS 
          respond. This is dubious because TestData.pm is provided in the 
          distribution under the ./t directory, and listed as no_index, which
          CPANTS ignores and says there is a prerequisite missing!

0.20    2008-03-28
        - purely a cosmetic release to render the Makefile.PL time issues, that
          have generated bogus FAIL reports in previous releases, null
          and void.

0.19    2008-03-19
        - removed 5.006 dependency
        - major refactorying effort
        - removed month_list, dotw3, month_days, diff_dates (Functions.pm)
        - added compare_dates (Functions.pm)
        - reinstated DateTime support
        - reworked lots of tests